RESOLVED FIXED90701
WebKit2 doesn't build with recent clang
https://bugs.webkit.org/show_bug.cgi?id=90701
Summary WebKit2 doesn't build with recent clang
Nuno Lopes
Reported 2012-07-06 13:35:25 PDT
WebKit2 doesn't build with recent clang.
Attachments
fix warnings by the new -Wunused-private-field (4.42 KB, patch)
2012-07-06 13:37 PDT, Nuno Lopes
webkit-ews: commit-queue-
fix warnings by the new -Wunused-private-field (take #2) (2.47 KB, patch)
2012-07-06 14:16 PDT, Nuno Lopes
no flags
Nuno Lopes
Comment 1 2012-07-06 13:37:33 PDT
Created attachment 151115 [details] fix warnings by the new -Wunused-private-field
Early Warning System Bot
Comment 2 2012-07-06 13:42:46 PDT
Comment on attachment 151115 [details] fix warnings by the new -Wunused-private-field Attachment 151115 [details] did not pass qt-wk2-ews (qt): Output: http://queues.webkit.org/results/13143573
Nuno Lopes
Comment 3 2012-07-06 14:16:05 PDT
Created attachment 151117 [details] fix warnings by the new -Wunused-private-field (take #2)
Alexey Proskuryakov
Comment 4 2012-07-07 01:23:45 PDT
I wonder what these notification-related files are not in an ifdef as a whole. Perhaps projects that don't enable notifications should not include them at all?
Jon Lee
Comment 5 2012-07-07 12:08:38 PDT
(In reply to comment #4) > I wonder what these notification-related files are not in an ifdef as a whole. Perhaps projects that don't enable notifications should not include them at all? That makes sense.
Nuno Lopes
Comment 6 2012-07-09 08:42:07 PDT
(In reply to comment #4) > I wonder what these notification-related files are not in an ifdef as a whole. Perhaps projects that don't enable notifications should not include them at all? Well, it makes sense to me, but I don't know anything about webkit's code nor I do work on anything related. I was just trying to fix the build for me :) If this enables a better fix, the better, but I' certainly not able to do more complex changes.
Eric Seidel (no email)
Comment 7 2012-08-12 03:40:49 PDT
Comment on attachment 151117 [details] fix warnings by the new -Wunused-private-field (take #2) rs=me.
WebKit Review Bot
Comment 8 2012-08-12 04:29:45 PDT
Comment on attachment 151117 [details] fix warnings by the new -Wunused-private-field (take #2) Clearing flags on attachment: 151117 Committed r125370: <http://trac.webkit.org/changeset/125370>
WebKit Review Bot
Comment 9 2012-08-12 04:29:49 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.