Fix build with recent clang. https://bugs.webkit.org/show_bug.cgi?id=90701

Patch by Nuno Lopes <nlopes@apple.com> on 2012-08-12
Reviewed by Eric Seidel.

* Shared/CommandLine.h:
(CommandLine):
* WebProcess/Notifications/NotificationPermissionRequestManager.cpp:
(WebKit::NotificationPermissionRequestManager::NotificationPermissionRequestManager):
* WebProcess/Notifications/NotificationPermissionRequestManager.h:
(NotificationPermissionRequestManager):

Canonical link: https://commits.webkit.org/111645@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125370 268f45cc-cd09-0410-ab3c-d52691b4dbfc